# nano-agent

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  code_review_tools_rs.md
scripts/: test_gateway_ws.py
src/: agent_core.rs  anthropic.rs  autonomy.rs  channels.rs  cli.rs  concurrency.rs  context.rs  core_loop.rs  delegation.rs  delivery.rs  dispatch.rs  gateway.rs  handler.rs  heartbeat.rs  isolation.rs  knowledge.rs  lib.rs  main.rs  memory.rs  memory_store.rs  mock.rs  openai.rs  pipeline.rs  planning.rs  prompt.rs  protocols.rs  resilience.rs  tasks.rs  teams.rs  tools.rs  types.rs  ui.rs  util.rs  ws_jsonrpc.rs
src/tui/: app_state.rs  events.rs  input.rs  mod.rs  render.rs  theme.rs
tests/: test_agent_core_headless.rs  test_heartbeat.rs  test_l10_autonomy.rs  test_l11_isolation.rs  test_l1_core_loop.rs  test_l2_planning.rs  test_l3_delegation.rs  test_l4_knowledge.rs  test_l5_memory.rs  test_l6_tasks.rs  test_l7_concurrency.rs  test_l8_teams.rs  test_l9_protocols.rs  test_lanes.rs  test_llm_backends.rs  test_prompt.rs  test_resilience.rs  test_scenarios.rs  test_security.rs  test_ws_jsonrpc.rs
