[package]
name = "nano-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
ureq = { version = "2", features = ["json"] }
clap = { version = "4", features = ["derive"] }
reedline = "0.37"
nu-ansi-term = "0.50"
ctrlc = "3"
ratatui = "0.29"
crossterm = "0.29"
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3"
